# DCM-scrubber

./: .gitignore  Makefile  README.md  SETUP.md  pyproject.toml  requirements-system.txt
Python/: extract_ocr_annotations.py  inference.py  train_model.py
dicom_deid_gui/: __init__.py  __main__.py  app.py  cli.py  controller.py  dicom_core.py  discovery.py  logging_setup.py  pdf_core.py  pii_ocr.py  reporting.py  widgets.py  worker.py
tests/: test_cli.py  test_dicom_core.py  test_discovery.py
